fixed white space in login page & display table name in guestlist

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -429,7 +429,8 @@ td, th {
 
 .login {
   background-image: url("src/assets/background-signup.jpeg");
-  height: 80vh;
+
+  height: 100vh;
   margin-top: 5vh;
   display: flex;
   justify-content: center;
